# Hypothesis-Lab

./: .env.example  .gitignore  AGENTS.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml
services/api/: README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260325_01_create_strategy_cards.py  20260326_01_add_strategy_snapshots_and_backtest_runs.py  20260330_01_add_backtest_results.py  20260331_01_add_conclusions.py  20260331_02_add_handbook_entries.py
services/api/app/: __main__.py  main.py
services/api/app/api/: errors.py  router.py
services/api/app/api/routes/: __init__.py  backtests.py  handbook.py  strategy_cards.py
services/api/app/application/: __init__.py  errors.py
services/api/app/application/backtests/: __init__.py  service.py
services/api/app/application/conclusions/: service.py
services/api/app/application/handbook/: service.py
services/api/app/application/strategy_cards/: __init__.py  service.py
services/api/app/domain/: __init__.py
services/api/app/domain/backtests/: __init__.py  (+1 more)
services/api/app/infrastructure/: __init__.py
services/api/app/schemas/: __init__.py  backtests.py  common.py  conclusions.py  handbook.py  strategy_cards.py
services/api/tests/integration/: test_backtest_all_symbols_independent.py  test_backtest_real_execution.py  test_backtests_placeholder.py  test_conclusions.py  test_handbook.py  test_historical_backtests.py  test_recent_experiments.py  test_strategy_card_duplicate.py  test_strategy_cards_api.py  test_strategy_cards_list.py
(+114 files in other folders)
