[project]
name = "hypothesis-lab-api"
version = "0.1.0"
description = "Hypothesis Lab backend service"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "fastapi>=0.135.2",
    "hypothesis-lab-backtest-engine",
    "psycopg[binary]>=3.3.3",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.48",
    "uvicorn[standard]>=0.42.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
]

[tool.uv.sources]
hypothesis-lab-backtest-engine = { path = "../../packages/backtest-engine" }
